[project]
name = "one-billion-row-challenge-python"
version = "0.1.0"
description = ""
authors = [{name = "Luciano Filho", email = "lvgalvaofilho@gmail.com"}]
readme = "README.md"
requires-python = "==3.12.1"
dependencies = [
    "polars==0.20.3",
    "duckdb==0.10.0",
    "modin[dask]>=0.27.0",
    "dask[complete]>=2024.2.0",
    "dask-expr>=0.4.2",
    "tqdm>=4.66.2",
]

[tool.uv]
package = false
